--- a/diamm/templates/website/source/contributions.jinja2
+++ b/diamm/templates/website/source/contributions.jinja2
@@ -1,4 +1,5 @@
 <div class="columns">
+    Contributions {{ content.contributions }}
     {% if not content.contributions %}
         <div class="column">
             <div class="notification">
