Fixed: Show item titles

--- a/diamm/templates/website/macros.jinja2
+++ b/diamm/templates/website/macros.jinja2
@@ -73,6 +73,8 @@
                 {{ "(?)" if composer.uncertain else "" }}
             </div>
         {% endfor %}
+    {% elif entry.item_title %}
+        -
     {% else %}
         Anonymous
     {% endif %}
