--- a/diamm/templates/website/source/description.jinja2
+++ b/diamm/templates/website/source/description.jinja2
@@ -26,11 +26,7 @@
                     {% endset %}
 
                     {% if content.has_external_manifest %}
-                         The images on this record are linked using <a href="https://iiif.io">IIIF</a>. <br />
-                        <a href="{{ content.manifest_url }}">
-                            <img src="{{ static("images/iiif.png") }}" style="width: 20px;" alt="IIIF logo" />
-                            View the IIIF Manifest
-                        </a>
+                         The images on this record are linked using <a href="https://iiif.io">IIIF</a>.
                     {% elif not content.has_images and not content.public_images %}
                         DIAMM does not have images of this source. {{ extmsg }}
                     {% elif content.has_images and not content.public_images %}
@@ -142,7 +138,10 @@
                         <ul class="no-style">
                             {% for link in content.links %}
                                 <li>
-                                    <a href="{{ link.link }}">{{ link.link_text }}</a>
+                                    <a href="{{ link.link }}">
+                                        {% if link.type == 1 %}<img src="{{ static("images/iiif.png") }}" style="width: 20px;" alt="IIIF logo" />{% endif %}
+                                        {{ link.link_text }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ul>
