--- a/diamm/templates/website/composition/composition_detail.jinja2
+++ b/diamm/templates/website/composition/composition_detail.jinja2
@@ -65,11 +65,13 @@
                 </thead>
                 <tbody>
                 {% for source in content.sources %}
-                    {% set has_images = source.has_images and source.public_images %}
+                    {% set has_images = (source.has_images and source.public_images) or source.has_external_manifest %}
                     <tr>
                         <td>
                             {% if has_images %}
-                                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                <span class="icon">
+                                    <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                </span>
                             {% endif %}
                             <a href="{{ source.url }}">{{ source.display_name }}</a>
                         </td>
