--- a/diamm/templates/website/source/images.jinja2
+++ b/diamm/templates/website/source/images.jinja2
@@ -1,5 +1,10 @@
 <div class="columns">
     <div class="column is-three-quarters">
+        {% if content.has_external_manifest %}
+            <div class="notification">
+            These images are from an external IIIF service and are not hosted by DIAMM.
+            </div>
+        {% endif %}
         <div id="diva-wrapper"></div>
     </div>
     <div class="column">
