--- a/diamm/templates/website/archive/archive_detail.jinja2
+++ b/diamm/templates/website/archive/archive_detail.jinja2
@@ -66,7 +66,7 @@
                 {% for source in content.sources %}
                     <tr>
                         <td>
-                            {% if source.public_images %}
+                            {% if source.public_images or source.has_external_manifest %}
                             <i class="fa fa-picture-o" />
                             {% endif %}
                         </td>
