Fixed: Don't require login for IIIF images

--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -166,7 +166,7 @@
                                     @mousedown.prevent
                                     @focus="$store.sourceTabs.select($el.id)"
                                 >
-                                    {% if request.user.is_authenticated %}
+                                    {% if request.user.is_authenticated or content.has_external_manifest %}
                                         <a href="#/images">Images</a>
                                     {% else %}
                                         <a href="/login?next={{ request.path }}%23/images">Images (Log in to view)</a>
