--- a/diva/diva.js/source/css/_variables.scss
+++ b/diva/diva.js/source/css/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 // Colours
 $white:                 #FFF;
 $mediumGrey:            #CCC;
@@ -22,7 +23,7 @@ $buttonFrame:           $primaryBorder;
 $buttonHover:           $lighterGrey;
 
 $inputFrame:            $primaryBorder;
-$inputHoverFrame:       darken($primaryBorder, 10%);
+$inputHoverFrame:       color.adjust($primaryBorder, $lightness: -10%);
 
 $linkBg:                $white;
 $linkFrame:             $grey;
