Updates to webapp

--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -44,6 +44,19 @@
                     "initialUrl": location.href
                 }
             });
+
+            // Inform app of browser navigation (the BACK and FORWARD buttons)
+            window.addEventListener('popstate', function ()
+            {
+                app.ports.onUrlChange.send(location.href);
+            });
+
+            // Change the URL upon request, inform app of the change.
+            app.ports.pushUrl.subscribe(function(url)
+            {
+                history.pushState({}, '', url);
+                app.ports.onUrlChange.send(location.href);
+            });
         });
     </script>
 </head>
