--- a/diamm/templates/website/bibliography/bibliography_entry.jinja2
+++ b/diamm/templates/website/bibliography/bibliography_entry.jinja2
@@ -116,7 +116,12 @@
     {%- endif %}
 {% endmacro -%}
 
-{%- macro volumes(content)  %}
+{%- macro volume_issue_number(content)  %}
+    {% set vol_iss = content["volumes"]|first -%}
+    {% if vol_iss -%}{{ vol_iss["entry"] }}{%- endif %}
+{% endmacro -%}
+
+{%- macro number_of_volumes_in_series(content)  %}
     {% set no_volumes = content["num_volumes"]|first -%}
     {% if no_volumes -%}{{ no_volumes["entry"] }} vols.{%- endif %}
 {% endmacro -%}
@@ -149,18 +154,19 @@
 {%- macro publication_info(content) %}
     {% if content["type"] == 1 -%}
         {# journal #}
-        {% set volume_no = content["volume_nos"]|first -%}
+        {% set volume_no = volume_issue_number(content) -%}
         {% set pg = pages(content) -%}
-        {% if volume_no -%}{{ volume_no["entry"] }}:&nbsp;{% endif -%}{{ pg }}{{ "." if not pg.endswith(".") else "" }}
+        {% if volume_no -%}{{ volume_no }}:&nbsp;{% endif -%}{{ pg }}{{ "." if not pg.endswith(".") else "" }}
     {% elif content["type"] in (2, 3, 5, 6, 9) -%}
         {# book #}
         {% set pg = pages(content) -%}
         {% set eds = editors(content) -%}
         {% set pub = publisher(content) -%}
-        {% set vols = volumes(content) -%}
+        {% set vols = number_of_volumes_in_series(content) -%}
         {% set ser = series(content) -%}
+        {% set volume_no = volume_issue_number(content) -%}
 
-        {% if ser -%}{{ ser }}{{ "." if not ser.endswith(".") else "" }}&nbsp;{%- endif  %}
+        {% if ser -%}{{ ser }}{% if volume_no %}, vol. {{ volume_no }}{% endif %}{{ "." if not ser.endswith(".") else "" }}&nbsp;{%- endif  %}
         {% if eds -%}{{ eds }},&nbsp;{%- endif %}
         {% if vols -%}{{ vols }}{%- endif %}
         {% if pg -%}{{ pg }}{{ "." if not pg.endswith(".") else "" }}{%- endif %}
